--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
   <div id="delete-card" class="popup">
     <div class="popup__container">
      <button type="button" class="popup__close-button">
-      <img id="image-closed" src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
+      <img src="<%=require('./images/Close_Icon.svg')%>" class="popup__close-icon" alt="крестик для закрытия диалогового окна">
      </button>
      <h2 class="popup__description">Вы уверены?</h2>
      <form id="delete-cards" name="delete-form" class="fields fields_delete-card" novalidate>
